--- a/style.css
+++ b/style.css
@@ -4,10 +4,6 @@
     margin: 0;
 }
 
-header {
-    background-clip: padding-box;
-    box-shadow: inset 0 0 5px #ff0000;
-}
 
 /* MAIN LOGO */
 .nav-logo-menu h1 a {
@@ -68,4 +64,88 @@ header {
 
 .dropdown:hover .dropbtn {
     background-color: snow;
+}
+/* ORANGE BOX FIRST SLIDE*/
+.first-orange-box{
+    width: 330px;
+    height: 200px;
+    position: absolute;
+    background: #e78a00;
+    left: 295px;
+    top: 85px;
+}
+.second-orange-box{
+    width: 100px;
+    height: 100px;
+    top: 590px;
+    position: absolute;
+    background: #e78a00;
+    left: 90px;
+}
+.second-orange-box-text{
+    position: absolute;
+    top: -10px;
+    left: 8px;
+    right: 10px;
+    bottom: -10px;
+    font-size: 80px;
+    padding: 0;
+    margin: 0;
+    color: snow;
+}
+.mountain-div-1 img{
+    position: absolute;
+    width: 540px;
+    height: 540px;
+    top: 117px;
+}
+.third-orange-box{
+    width: 800px;
+    height: 450px;
+    top: 150px;
+    position: absolute;
+    background: #e78a00;
+    opacity: 0.7;
+    left: 570px;
+}
+.third-orange-box-text-title{
+    position: absolute;
+    left: 56px;
+    top: 15px;
+    color: snow;
+    font-size: 75px;
+}
+.third-orange-box-text-text{
+    position: absolute;
+    color: snow;
+    font-size: 17px;
+    left: 59px;
+    top: 250px;
+}
+.button {
+    border: none;
+    color: white;
+    padding: 10px 35px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+
+.button1 {
+    position: absolute;
+    background-color: transparent;
+    color: snow;
+    border: 2px solid snow;
+    left: 100px;
+    top: 350px;
+}
+
+.button1:hover {
+    background-color: transparent;
+    color: black;
+    border: 2px solid black;
 }
