--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@
 
 /* 4TH PART*/
 .fourth-first-orange-box {
-    width: 1100px;
+    width: 1050px;
     height: 380px;
     top: 1200px;
     position: absolute;
@@ -271,8 +271,8 @@
 
 .fourth-first-orange-box img {
     position: absolute;
-    width: 520px;
-    height: 530px;
+    width: 470px;
+    height: 600px;
     top: 265px;
     left: 480px;
 }
@@ -302,3 +302,37 @@
     left: 700px;
 }
 
+.third-winter p {
+    position: absolute;
+    font-size: 43px;
+    left: 290px;
+    top: 1750px;
+}
+
+.vertical-orange-board {
+    position: absolute;
+    background: #e78a00;
+    width: 11px;
+    left: 265px;
+    height: 345px;
+    top: 1610px;
+}
+
+.text-under-vertical-orange-board {
+    position: absolute;
+    top: 1960px;
+    left: 290px;
+    text-justify: auto;
+    background-color: #ffffff;
+    padding-right: 90px;
+    padding-top: 25px;
+}
+
+.learn-more-1 a {
+    position: absolute;
+    top: 2090px;
+    left: 290px;
+    color: #e78a00;
+    text-justify: auto;
+    background-color: #ffffff;
+}
